# scrapedata

./: .env.example  .gitignore  Acolyte System Architecture Code  Acolyte System Flow Diagram Code  Chart.json  Early Product - Fraud Detection  Enriched_Automated_Fraud_Rule_Generation_Credit_Card_Issuers[1].docx  KafkaConsumer  KafkaController  KafkaProducer  LanggraphWithSemanticAndEpisodicMemory  Large Data Pipeline.txt  PostgresTestConnection.py  README.md  Reports.py  SubtitleGenerator.py  Team_Member_Weekly_Activity_Tracking.xlsx  acolyte_presentation.txt  acolyte_system_architecture.mermaid  dag.py  eval_report.html  eval_results.json  fb.txt  file  gptlinks.txt  gradle  jsonparseragent.py  lumi_column_compare_dag.py  mcp_client.py  mcp_server.py  new acolyte presentation.txt  new_code.py  new_code1.py  okr.txt  pyproject.toml  single_question_report.html  single_question_result.json  start.bat  streamlitapp.py  supercheap.md  (+3 more)
api/: main.py  runner.py
dataset/: metadata.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useEvalResults.ts  useEvalRun.ts  useResultFiles.ts
frontend/src/pages/: DashboardPage.tsx  RunEvalPage.tsx
frontend/src/store/: useEvalStore.ts
frontend/src/types/: eval.ts
frontend/src/utils/: classifyLog.ts  convertSingleQuestion.ts  (+2 more)
scripts/: generate_report.py  generate_single_report.py  prepare_dataset.py  run_eval.py  run_single_question.py
tests/: test_dag_utils.py  test_sandbox.py
(+45 files in other folders)
